--- a/home/package.json
+++ b/home/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "expo": "^35.0.0",
+    "expo-constants": "^7.0.0",
     "expo-image-picker": "^7.0.0",
+    "expo-permissions": "^7.0.0",
     "navbar-native": "^1.6.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
